api: add endpoints for memberships create and destroy.
