# config/routes.rb
@@ -11,10 +11,11 @@ Rails.application.routes.draw do
 
   namespace :api do
     namespace :v1 do
-      jsonapi_resources :users
+      jsonapi_resources :memberships, only: %i[create destroy]
       jsonapi_resources :tags
       jsonapi_resources :tag_types
       jsonapi_resources :time_ranges, only: %i[index show create]
+      jsonapi_resources :users
       jsonapi_resources :user_groups
     end
   end
