# swagger/v1/swagger.json
@@ -14,6 +14,91 @@
     }
   },
   "paths": {
+    "/api/v1/memberships": {
+      "post": {
+        "summary": "create membership",
+        "tags": [
+          "Memberships"
+        ],
+        "security": [
+          {
+            "JWT": {
+            }
+          }
+        ],
+        "consumes": [
+          "application/vnd.api+json"
+        ],
+        "produces": [
+          "application/vnd.api+json"
+        ],
+        "parameters": [
+          {
+            "name": "membership",
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/membership_post_params"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Membership created",
+            "schema": {
+              "$ref": "#/definitions/membership_response"
+            }
+          },
+          "400": {
+            "description": "Bad request",
+            "schema": {
+              "$ref": "#/definitions/error_422"
+            }
+          },
+          "422": {
+            "description": "Invalid request",
+            "schema": {
+              "$ref": "#/definitions/error_422"
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/memberships/{id}": {
+      "delete": {
+        "summary": "destroy membership",
+        "tags": [
+          "Memberships"
+        ],
+        "security": [
+          {
+            "JWT": {
+            }
+          }
+        ],
+        "produces": [
+          "application/vnd.api+json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "type": "string",
+            "required": true
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "OK: No Content"
+          },
+          "404": {
+            "description": "Record not found",
+            "schema": {
+              "$ref": "#/definitions/error_404"
+            }
+          }
+        }
+      }
+    },
     "/api/v1/tag_types": {
       "post": {
         "summary": "create tag type",
@@ -1886,7 +1971,7 @@
       "properties": {
         "name": {
           "type": "string",
-          "example": "nesciunt",
+          "example": "esse",
           "x-nullable": false
         },
         "group_type_id": {
@@ -2013,6 +2098,64 @@
             },
             "attributes": {
               "$ref": "#/definitions/user_group_attributes"
+            }
+          }
+        }
+      }
+    },
+    "membership_attributes": {
+      "type": "object",
+      "properties": {
+        "user_id": {
+          "type": "integer",
+          "example": 1234,
+          "x-nullable": false
+        },
+        "user_group_id": {
+          "type": "integer",
+          "example": 13,
+          "x-nullable": false
+        },
+        "role": {
+          "type": "string",
+          "example": "member",
+          "x-nullable": false
+        }
+      }
+    },
+    "membership_response": {
+      "type": "object",
+      "properties": {
+        "data": {
+          "type": "object",
+          "properties": {
+            "id": {
+              "type": "string",
+              "example": "123"
+            },
+            "type": {
+              "type": "string",
+              "example": "memberships"
+            },
+            "attributes": {
+              "$ref": "#/definitions/membership_attributes"
+            }
+          }
+        }
+      }
+    },
+    "membership_post_params": {
+      "type": "object",
+      "properties": {
+        "data": {
+          "type": "object",
+          "properties": {
+            "type": {
+              "type": "string",
+              "example": "memberships"
+            },
+            "attributes": {
+              "$ref": "#/definitions/membership_attributes"
             }
           }
         }
